# launchpad2-experiment

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml  sanity-checks.yml
build_agent/: README.md  __init__.py  agent.py  app.py  cli_demo.py  llm_client.py  requirements.txt  streamlit_app.py
build_agent/agents/: __init__.py  context.py  context_getter.py  drawer.py  master.py  reasoning.py
build_agent/mcp_servers/boston_opendata/: __init__.py  ckan.py  config.py  formatters.py  main.py  server.py
build_agent/supervisors/: documentation.py  frameworks.py  research.py
build_agent/tools/: opendata_mcp.py  process_map.py
