[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "launchpad2-experiment"
version = "0.1.0"
description = "Launchpad2 experiment with build agent"
dependencies = [
    "langchain==0.3.27",
    "langchain-community==0.3.31",
    "langchain-openai==0.3.35",
    "streamlit==1.50.0",
    "python-dotenv==1.1.1",
    "streamlit-mermaid==0.3.0",
    "mcp==1.18.0",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "pre-commit>=3.6",
    "ruff>=0.5"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["build_agent*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
